Send all data on I2C

--- a/.cproject
+++ b/.cproject
@@ -48,7 +48,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="SoftI2CMaster|AdafruitMotorShield|Libraries/*/?xamples|Libraries/*/?xtras" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
+						<entry excluding="external/SoftI2CMaster/examples|external/AdafruitMotorShield/examples|SoftI2CMaster|AdafruitMotorShield|Libraries/*/?xamples|Libraries/*/?xtras" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
