--- a/BeaconDetectorMasterSimulator/.project
+++ b/BeaconDetectorMasterSimulator/.project
@@ -29,7 +29,7 @@
 		<link>
 			<name>BeaconDetectorCommon</name>
 			<type>2</type>
-			<locationURI>BeaconDetectorMasterSimulatorBeaconDetectorCommon/BeaconDetectorCommon</locationURI>
+			<location>/home/pmx/git/AdversaryLaserDetection/BeaconDetectorCommon</location>
 		</link>
 		<link>
 			<name>Libraries/Wire</name>
@@ -50,15 +50,15 @@
 	<variableList>
 		<variable>
 			<name>ArduinoHardwareLibPath</name>
-			<value>file:/D:/PM-ROBOTIX/arduino-1.6.5-r5/hardware/arduino/avr/libraries</value>
+			<value>file:/install/arduino-1.6.5-r5/hardware/arduino/avr/libraries</value>
 		</variable>
 		<variable>
 			<name>ArduinoPinPath</name>
-			<value>file:/D:/PM-ROBOTIX/arduino-1.6.5-r5/hardware/arduino/avr/variants</value>
+			<value>file:/install/arduino-1.6.5-r5/hardware/arduino/avr/variants</value>
 		</variable>
 		<variable>
 			<name>ArduinoPlatformPath</name>
-			<value>file:/D:/PM-ROBOTIX/arduino-1.6.5-r5/hardware/arduino/avr/cores</value>
+			<value>file:/install/arduino-1.6.5-r5/hardware/arduino/avr/cores</value>
 		</variable>
 	</variableList>
 </projectDescription>
